# api-marketplace-products

./: DEPLOYMENT.md  README.md  categories_table.sql  products_table.sql  pyproject.toml
src/: main.py
